style.css
body {
    font-family: "Roboto", "sans-serif";
    margin: 0;
}

/* start of header */
.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #1F2937;
    padding: 20px 150px;
}

.logo {
    color: #F9FAF8;
    font-size: 24px;
    font-weight: 900;
}

ul {
    display: flex;
    list-style-type: none;
    margin: 0;
    padding: 0;
    gap: 20px;
}

a {
    text-decoration: none;
    color: #E5E7EB;
    font-size: 18px;
}

/* start of hero content */
.content1 {
    display: flex;
    justify-content: space-between;
    background-color: #1F2937;
    padding: 100px 150px;
}

.hero-main {
    color: #F9FAF8;
    font-size: 48px;
    font-weight: 900;
}

.hero-subtext {
    color: #E5E7EB;
    font-size: 18px;
    margin-bottom: 13px;
}

.sign-button {
    background-color: #3882F6;
    color: #F9FAF8;
    font-size: 18px;
    font-weight: bold;
    border-radius: 8px;
    padding: 8px 30px;
    border: none;
}

.right {
    padding: 100px;
    background-color: #7b8187;
    color: #F9FAF8;
    font-size: 18px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.left {
    width: 450px;
}

/* start of info content */
.info-header {
    color: #1F2937;
    font-size: 36px;
    font-weight: 900;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 50px 0;
}

.info-container {
    display: flex;
    justify-content: center;
    color: #7b8187;
    font-size: 18px;
    text-align: center;
    margin-bottom: 120px;
}

.info-box {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0 20px;
}

.info-subtext {
    width: 170px;
    margin-top: 8px;
}

.img {
    border: 4px solid #3882F6;
    border-radius: 15px;
    width: 160px;
    height: 160px;
}

/* start of quote content */
.content3 {
    background-color: #E5E7EB;
    color: #1F2937;
    padding: 120px 130px;
}

.quote {
    font-size: 36px;
    font-style: italic;
    max-width: 820px;
    margin: auto;
}

.name {
    font-size: 23px;
    font-weight: 900;
    text-align: right;
    max-width: 800px;
    margin: auto;
}

/* start of action banner */

